Add Mode for DDCC Connector